完成更多STL容器支持

--- a/bin/conf/test.yml
+++ b/bin/conf/test.yml
@@ -4,3 +4,17 @@ system:
     int_vec:
         - 10
         - 30
+    int_list: [20, 40, 50]
+    int_set: [30, 20, 60, 20]
+    int_uset: [30, 20, 60, 20]
+    str_int_map:
+        k: 30
+        k2: 20
+        k3: 10
+    str_int_umap:
+        k: 130
+        k2: 120
+        k3: 110
+    str_int_vec_umap:
+        x: [10,20,30]
+        k: [30,40,10]
