--- a/bin/conf/test.yml
+++ b/bin/conf/test.yml
@@ -1,3 +1,19 @@
+logs:
+    - name: root
+      level: info
+      formatter: "%d%T%m%n"
+      appender:
+          - type: FileLogAppender
+            file: log.txt
+          - type: StdoutLogAppender
+    - name: system
+      level: debug
+      formatter: "%d%T%m%n"
+      appender:
+          - type: FileLogAppender
+            path: log.txt
+          - type: StdoutLogAppender
+
 system:
     port: 9900
     value: 15
@@ -16,5 +32,35 @@ system:
         k2: 120
         k3: 110
     str_int_vec_umap:
-        x: [10,20,30]
-        k: [30,40,10]
+        x: [10, 20, 30]
+        k: [30, 40, 10]
+
+class:
+    person:
+        name: sylar
+        age: 31
+        sex: true
+    map:
+        sylar1:
+            name: sylar01
+            age: 18
+            sex: false
+        sylar2:
+            name: sylar02
+            age: 40
+            sex: true
+    vec_map:
+        k1:
+            - name: m1
+              age: 33
+              sex: true
+            - name: m2
+              age: 44
+              sex: false
+        k2:
+            - name: m21
+              age: 33
+              sex: true
+            - name: m22
+              age: 44
+              sex: false
