日志系统配置整合

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_miniMum_required(VERSION 3.0)
 
 project(sylar)
-
+include (cmake/utils.cmake)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
 # 指定编译选项
@@ -10,7 +10,7 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 # -Wall 开启大部分警告提示
 # -Wno-unused-funtion 不要警告未使用函数
 # -Wno-deprecated 不要警告过时特性
-set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function")
+set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function -Wno-builtin-macro-redefined")
 
 include_directories(.)
 include_directories(/yaml-cpp/include)
@@ -26,23 +26,17 @@ set(LIB_SRC
 	)
 
 add_library(sylar SHARED ${LIB_SRC})
+force_redefine_file_macro_for_sources(sylar) #__FILE__
 
 add_executable(test tests/test.cc)
 add_dependencies(test sylar)
+force_redefine_file_macro_for_sources(test) #__FILE__
 target_link_libraries(test sylar ${YAMLCPP})
 
 add_executable(test_config tests/test_config.cc)
 add_dependencies(test_config sylar)
+force_redefine_file_macro_for_sources(test_config) #__FILE__
 target_link_libraries(test_config sylar ${YAMLCPP})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-
-
-
-
-
-
-
-
