--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ set(LIB_SRC
 	sylar/util.cc
 	sylar/config.cc
 	sylar/thread.cc
+	sylar/scheduler.cc
+	sylar/fiber.cc
 	)
 
 add_library(sylar SHARED ${LIB_SRC})
@@ -57,6 +59,16 @@ add_executable(test_util tests/test_util.cc)
 add_dependencies(test_util sylar)
 force_redefine_file_macro_for_sources(test_util) #__FILE__
 target_link_libraries(test_util ${LIBS})
+
+add_executable(test_fiber tests/test_fiber.cc)
+add_dependencies(test_fiber sylar)
+force_redefine_file_macro_for_sources(test_fiber) #__FILE__
+target_link_libraries(test_fiber ${LIBS})
+
+add_executable(test_scheduler tests/test_scheduler.cc)
+add_dependencies(test_scheduler sylar)
+force_redefine_file_macro_for_sources(test_scheduler) #__FILE__
+target_link_libraries(test_scheduler ${LIBS})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
