--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ set(LIB_SRC
 	sylar/timer.cc
 	sylar/thread.cc
 	sylar/util.cc
+	sylar/address.cc
 	)
 
 add_library(sylar SHARED ${LIB_SRC})
@@ -85,6 +86,11 @@ add_executable(test_hook tests/test_hook.cc)
 add_dependencies(test_hook sylar)
 force_redefine_file_macro_for_sources(test_hook) #__FILE__
 target_link_libraries(test_hook ${LIBS})
+
+add_executable(test_address tests/test_address.cc)
+add_dependencies(test_address sylar)
+force_redefine_file_macro_for_sources(test_address) #__FILE__
+target_link_libraries(test_address ${LIBS})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
