--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ set(LIB_SRC
 	sylar/util.cc
 	sylar/address.cc
 	sylar/socket.cc
+	sylar/bytearray.cc
 	)
 
 add_library(sylar SHARED ${LIB_SRC})
@@ -97,6 +98,11 @@ add_executable(test_socket tests/test_socket.cc)
 add_dependencies(test_socket sylar)
 force_redefine_file_macro_for_sources(test_socket) #__FILE__
 target_link_libraries(test_socket ${LIBS})
+
+add_executable(test_bytearray tests/test_bytearray.cc)
+add_dependencies(test_bytearray sylar)
+force_redefine_file_macro_for_sources(test_bytearray) #__FILE__
+target_link_libraries(test_bytearray ${LIBS})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
