完成时间分片日志输出器

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ set(LIB_SRC
     sylar/http/ws_servlet.cc
 	sylar/util/hash_util.cc
 	sylar/application.cc
+	sylar/util/time.cc
 	)
 
 ragelmaker(sylar/http/http11_parser.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/sylar/http)
