完成时间分片日志器的配置部分

--- a/bin/conf/log.yml
+++ b/bin/conf/log.yml
@@ -14,3 +14,8 @@ logs:
             file: system.txt
             formatter: '%d%T[%p]%T%m%n'
           - type: StdoutLogAppender
+          # - type: TimeSlicingFileLogAppender
+          #   path: "."
+          #   prefix: "test"
+          #   suffix: ".txt"
+          #   interval: 1
