--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ set(LIB_SRC
     sylar/http/http11_parser.rl.cc
     sylar/http/httpclient_parser.rl.cc
 	sylar/tcp_server.cc
-	sylar/socket_stream.cc
+	sylar/streams/socket_stream.cc
     sylar/stream.cc
 	sylar/http/http_session.cc
 	sylar/http/http_server.cc
