--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -3,7 +3,7 @@ project(project_name)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sylar)
 
-include (./sylar/cmake/utils.cmake)
+include (sylar/cmake/utils.cmake)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function -Wno-builtin-macro-redefined")
@@ -14,6 +14,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/sylar)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/sylar/thirdpart)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/sylar/thirdpart)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/sylar/thirdpart/yaml-cpp/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/sylar/thirdpart/jsoncpp-1.8.4/include)
 link_directories(/apps/sylar/lib)
 
 find_package(Boost REQUIRED)
