--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,12 @@ if(OPENSSL_FOUND)
     include_directories(${OPENSSL_INCLUDE_DIR})
 endif()
 
+find_package(ZLIB REQUIRED)
+
+if(ZLIB_FOUND)
+    include_directories(${ZLIB_INCLUDE_DIR})
+endif()
+
 set(LIB_SRC 
 	sylar/config.cc
 	sylar/fiber.cc
@@ -73,6 +79,7 @@ set(LIB_SRC
 	sylar/util/json_util.cc
 	sylar/streams/zlib_stream.cc
 	sylar/streams/async_socket_stream.cc
+	sylar/protocol.cc
 	)
 
 ragelmaker(sylar/http/http11_parser.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/sylar/http)
@@ -95,6 +102,7 @@ set(LIBS
 		${PROTOBUF_LIBRARIES}
 		${OPENSSL_LIBRARIES}
 		libjsoncpp_static.a
+		${ZLIB_LIBRARIES}
 		)
 
 message("***", ${LIBS})
@@ -125,13 +133,13 @@ sylar_add_executable(test_ws_client "tests/test_ws_client.cc" sylar "${LIBS}")
 sylar_add_executable(test_application "tests/test_application.cc" sylar "${LIBS}")
 
 add_library(test SHARED tests/test_module.cc)
-endif()
 
 sylar_add_executable(test_http_connection "tests/test_http_connection.cc" sylar "${LIBS}")
 sylar_add_executable(test_lru "tests/test_lru.cc" sylar "${LIBS}")
 sylar_add_executable(test_timed_cache "tests/test_timed_cache.cc" sylar "${LIBS}")
 sylar_add_executable(test_timed_lru_cache "tests/test_timed_lru_cache.cc" sylar "${LIBS}")
 sylar_add_executable(test_zlib_stream "tests/test_zlib_stream.cc" sylar "${LIBS}")
+endif()
 
 sylar_add_executable(bin_sylar "sylar/main.cc" sylar "${LIBS}")
 set_target_properties(bin_sylar PROPERTIES OUTPUT_NAME "sylar")
