--- a/bin/conf/server.yml
+++ b/bin/conf/server.yml
@@ -12,4 +12,10 @@ servers:
       name: sylar/2.1
       accept_worker: accept
       process_worker:  io
-      type: http
+      type: ws
+    - address: ["0.0.0.0:8062", "localhost:8061"]
+      timeout: 1000
+      name: sylar-rock/1.0
+      accept_worker: accept
+      process_worker:  io
+      type: rock
