--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,8 @@ set(LIB_SRC
 	sylar/util/crypto_util.cc
 	sylar/rock/rock_server.cc
 	sylar/db/sqlite3.cc
+	sylar/streams/load_balance.cc
+	sylar/rock/rock_stream.cc
 	)
 
 ragelmaker(sylar/http/http11_parser.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/sylar/http)
@@ -137,8 +139,6 @@ sylar_add_executable(test_ws_server "tests/test_ws_server.cc" sylar "${LIBS}")
 sylar_add_executable(test_ws_client "tests/test_ws_client.cc" sylar "${LIBS}")
 sylar_add_executable(test_application "tests/test_application.cc" sylar "${LIBS}")
 
-add_library(test SHARED tests/test_module.cc)
-
 sylar_add_executable(test_http_connection "tests/test_http_connection.cc" sylar "${LIBS}")
 sylar_add_executable(test_lru "tests/test_lru.cc" sylar "${LIBS}")
 sylar_add_executable(test_timed_cache "tests/test_timed_cache.cc" sylar "${LIBS}")
@@ -146,8 +146,12 @@ sylar_add_executable(test_timed_lru_cache "tests/test_timed_lru_cache.cc" sylar 
 sylar_add_executable(test_zlib_stream "tests/test_zlib_stream.cc" sylar "${LIBS}")
 endif()
 sylar_add_executable(test_crypto "tests/test_crypto.cc" sylar "${LIBS}")
-sylar_add_executable(bin_sylar "sylar/main.cc" sylar "${LIBS}")
+
 sylar_add_executable(test_sqlite3 "tests/test_sqlite3.cc" sylar "${LIBS}")
+sylar_add_executable(test_rock "tests/test_rock.cc" sylar "${LIBS}")
+
+add_library(test_module SHARED tests/test_module.cc)
+sylar_add_executable(bin_sylar "sylar/main.cc" sylar "${LIBS}")
 set_target_properties(bin_sylar PROPERTIES OUTPUT_NAME "sylar")
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
