--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ set(LIB_SRC
 	sylar/ns/name_server_module.cc
     sylar/ns/ns_client.cc
     sylar/ns/ns_protocol.cc
+	sylar/ds/bitmap.cc
 	)
 
 ragelmaker(sylar/http/http11_parser.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/sylar/http)
@@ -192,6 +193,7 @@ set(OLIBS ${OLIBS} orm_data)
 sylar_add_executable(test_orm "tests/test_orm.cc" orm_data "${OLIBS}")
 
 sylar_add_executable(test_nameserver "tests/test_nameserver.cc" sylar "${LIBS}")
+sylar_add_executable(test_bitmap "tests/test_bitmap.cc" sylar "${LIBS}")
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
